cmake_minimum_required(VERSION 3.19)
project(LeetCode C)

set(CMAKE_C_STANDARD 11)




add_executable(13-roman-to-integer "C/leetcode/editor/cn/13-roman-to-integer.c")
add_executable(1-two-sum C/leetcode/editor/cn/1-two-sum.c)
add_executable(7-reverse-integer C/leetcode/editor/cn/7-reverse-integer.c)