cmake_minimum_required(VERSION 3.19)
project(LeetCode C)

set(CMAKE_C_STANDARD 11)




add_executable(13-roman-to-integer "C/leetcode/editor/cn/13-roman-to-integer.c")
add_executable(1-two-sum C/leetcode/editor/cn/1-two-sum.c)
add_executable(7-reverse-integer C/leetcode/editor/cn/7-reverse-integer.c)
add_executable(test C/leetcode/editor/cn/test.c)
add_executable(26-remove-duplicates-from-sorted-array C/leetcode/editor/cn/26-remove-duplicates-from-sorted-array.c)
add_executable(136-single-number C/leetcode/editor/cn/136-single-number.c)
add_executable(202-happy-number C/leetcode/editor/cn/202-happy-number.c)
add_executable(283-move-zeroes C/leetcode/editor/cn/283-move-zeroes.c)
add_executable(122-best-time-to-buy-and-sell-stock-ii C/leetcode/editor/cn/122-best-time-to-buy-and-sell-stock-ii.c)